--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	.modify_this{
 		color: black;
 		font-weight: bold;
-		background-color: lavender;
+		background-color: blanchedalmond;
 	}
 	.modify_this_too{
 		color: blue;
